--- a/index.html
+++ b/index.html
@@ -2389,7 +2389,8 @@
          */
         async function fetchCrossoverSignalData() {
             // !!! IMPORTANT: REPLACE THIS URL with the raw URL of your crypto_signals.json file on GitHub
-            const signalJsonUrl = 'https://raw.githubusercontent.com/YOUR_USERNAME/YOUR_REPOSITORY/main/crypto_signals.json';
+            // Fetch the JSON file from the same repository.
+const signalJsonUrl = 'crypto_signals.json';
             
             try {
                 const response = await fetch(`${signalJsonUrl}?cache_bust=${new Date().getTime()}`);
