--- a/index.html
+++ b/index.html
@@ -2548,7 +2548,7 @@ function createCrossoverSignalTableHTML(symbol, symbolData) {
                             <tr>
                                 <th>Timeframe</th>
                                 <th>Signal Stage</th>
-                                <th>Key Level</th>
+                                <th>0-Candle Resistance</th>
                             </tr>
                         </thead>
                         <tbody>${tableRows}</tbody>
