--- a/index.html
+++ b/index.html
@@ -1428,6 +1428,67 @@
                 gap: 25px;
             }
         }
+
+
+
+        /* --- STYLES FOR OPTIONS OI TAB --- */
+#options-oi-metadata {
+    text-align: center;
+    margin-bottom: 25px;
+    font-size: 14px;
+    color: var(--subtle-text);
+}
+.oi-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 0;
+}
+.oi-table th, .oi-table td {
+    padding: 12px 15px;
+    font-size: 14px;
+}
+.oi-table th {
+    text-align: left;
+}
+.oi-table td {
+    text-align: right;
+    border-bottom: 1px solid var(--border-color);
+}
+.oi-table td:first-child, .oi-table th:first-child {
+    text-align: left;
+    font-weight: 500;
+}
+.oi-type-pill {
+    display: inline-block;
+    padding: 3px 10px;
+    border-radius: 12px;
+    font-size: 12px;
+    font-weight: bold;
+    text-align: center;
+    min-width: 80px;
+}
+.oi-type-quarterly { background-color: #ffc107; color: #333; }
+.oi-type-monthly { background-color: var(--link-color); color: white; }
+.oi-type-weekly { background-color: var(--card-bg); color: var(--subtle-text); border: 1px solid var(--border-color); }
+.oi-type-daily { background-color: var(--header-bg); color: var(--subtle-text); }
+.oi-bar-cell {
+    position: relative;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.oi-bar {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    background-color: var(--green-bar);
+    z-index: 0;
+    border-radius: 0 3px 3px 0;
+}
+.oi-value {
+    position: relative;
+    z-index: 1;
+}
     </style>
 </head>
 <body>
@@ -1475,6 +1536,7 @@
             <button class="tab-link" data-tab="sr-levels">S/R Levels</button>
             <button class="tab-link" data-tab="charts">Charts</button>
             <button class="tab-link" data-tab="notes">Notes</button>
+            <button class="tab-link" data-tab="options-oi">Options OI</button>
         </div>
 
         <div id="tracker-tab" class="tab-content active">
@@ -2021,7 +2083,11 @@
         </div>
 
     </div>
-
+<!-- ADD THIS ENTIRE NEW SECTION AFTER IT -->
+<div id="options-oi-tab" class="tab-content">
+    <!-- The content will be dynamically inserted here by JavaScript -->
+    <p style="text-align: center; padding: 40px; color: var(--subtle-text);">Loading Options Open Interest data...</p>
+</div>
     <div id="image-modal" class="modal-overlay" style="display: none;">
         <span class="modal-close">&times;</span>
         <button id="modal-prev" class="modal-nav">&lt;</button>
@@ -2187,6 +2253,7 @@
             noteModalTitle: document.getElementById('note-modal-title'),
             noteModalContent: document.getElementById('note-modal-content'),
             noteModalClose: document.getElementById('note-modal-close'),
+            optionsOiTab: document.getElementById('options-oi-tab'),
         };
 
         // --- APPLICATION STATE ---
@@ -3824,7 +3891,72 @@
                 });
             });
         }
+async function fetchAndRenderOptionsData() {
+    if (!DOM.optionsOiTab) return;
+    const jsonFile = 'deribit_open_interest_classified.json';
+    try {
+        const response = await fetch(`${jsonFile}?cache_bust=${new Date().getTime()}`);
+        if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
+        const data = await response.json();
 
+        // Find the maximum notional value to scale the bars
+        const maxNotional = Math.max(...data.expirations.map(exp => exp.notional_value_usd));
+
+        // Build metadata HTML
+        const metadataHtml = `
+            <div id="options-oi-metadata">
+                <strong>${data.metadata.currency} Options Open Interest</strong><br>
+                Last calculated: ${new Date(data.metadata.calculation_timestamp_utc).toLocaleString()} | 
+                BTC Index Price: ${formatCurrency(data.metadata.btc_index_price_usd)}
+            </div>
+        `;
+
+        // Build table header
+        const tableHeaderHtml = `
+            <thead>
+                <tr>
+                    <th>Expiration Date</th>
+                    <th>Day</th>
+                    <th>Type</th>
+                    <th style="text-align: right;">Open Interest (BTC)</th>
+                    <th style="text-align: right; width: 35%;">Notional Value (USD)</th>
+                </tr>
+            </thead>
+        `;
+
+        // Build table rows
+        const tableRowsHtml = data.expirations.map(expiry => {
+            const barWidth = (expiry.notional_value_usd / maxNotional) * 100;
+            return `
+                <tr>
+                    <td>${expiry.expiration_date}</td>
+                    <td>${expiry.day_of_week}</td>
+                    <td><span class="oi-type-pill oi-type-${expiry.option_type.toLowerCase()}">${expiry.option_type}</span></td>
+                    <td>${expiry.open_interest_btc.toLocaleString('en-US', {minimumFractionDigits: 2, maximumFractionDigits: 2})}</td>
+                    <td class="oi-bar-cell">
+                        <div class="oi-bar" style="width: ${barWidth}%;"></div>
+                        <span class="oi-value">$${expiry.notional_value_usd.toLocaleString('en-US', {minimumFractionDigits: 0, maximumFractionDigits: 0})}</span>
+                    </td>
+                </tr>
+            `;
+        }).join('');
+
+        // Combine and render
+        DOM.optionsOiTab.innerHTML = `
+            ${metadataHtml}
+            <div class="table-wrapper">
+                <table class="oi-table">
+                    ${tableHeaderHtml}
+                    <tbody>${tableRowsHtml}</tbody>
+                </table>
+            </div>
+        `;
+
+    } catch (error) {
+        console.error("Could not fetch or render options data:", error);
+        DOM.optionsOiTab.innerHTML = `<p style="text-align: center; padding: 40px; color: var(--red-text);">Error loading options data. Please check the console.</p>`;
+    }
+}
         function handleDeleteAttachmentImage(entryId, entryType, imageId, fileName) {
             if (!STATE.isMasterUser || !entryId || !entryType || !imageId || !fileName) return;
             if (confirm(`Delete this attachment?\n\n${fileName}`)) {
@@ -4034,6 +4166,8 @@
             fetchSrData();
             fetchMarketOpens();
             fetchCrossoverSignalData();
+            fetchAndRenderOptionsData(); // <-- ADD THIS LINE
+
             setInterval(fetchCrossoverSignalData, 5 * 60 * 1000); // Refresh every 5 minutes
             const savedTheme = localStorage.getItem('theme');
             if (savedTheme) { 
