--- a/index.html
+++ b/index.html
@@ -2081,13 +2081,15 @@
                 </div>
             </div>
         </div>
+<!-- PASTE THE NEW TAB CONTENT HERE -->
+        <div id="options-oi-tab" class="tab-content">
+            <!-- The content will be dynamically inserted here by JavaScript -->
+            <p style="text-align: center; padding: 40px; color: var(--subtle-text);">Loading Options Open Interest data...</p>
+        </div>
+
 
     </div>
-<!-- ADD THIS ENTIRE NEW SECTION AFTER IT -->
-<div id="options-oi-tab" class="tab-content">
-    <!-- The content will be dynamically inserted here by JavaScript -->
-    <p style="text-align: center; padding: 40px; color: var(--subtle-text);">Loading Options Open Interest data...</p>
-</div>
+
     <div id="image-modal" class="modal-overlay" style="display: none;">
         <span class="modal-close">&times;</span>
         <button id="modal-prev" class="modal-nav">&lt;</button>
