--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -102,7 +101,6 @@
                         <div class="table-wrapper">
                             <table>
                                 <thead>
-                                    <!-- MODIFIED: Added RR column -->
                                     <tr><th>Symbol</th><th>Type</th><th>Avg. Entry</th><th>Entries</th><th>Stop Loss</th><th>Target</th><th>Position Value ($)</th><th>Est. Total Fee ($)</th><th>Net Profit Est. ($)</th><th>Net Loss Est. ($)</th><th>RR</th><th>Date Opened</th><th>Note</th><th>Charts</th><th class="master-only">Actions</th></tr>
                                 </thead>
                                 <tbody id="trades-tbody"></tbody>
@@ -328,7 +326,6 @@
                         <div class="table-wrapper">
                             <table>
                                 <thead>
-                                    <!-- MODIFIED: Added RR column -->
                                     <tr><th>Symbol</th><th>Type</th><th>Avg. Entry</th><th>Entries</th><th>Stop Loss</th><th>Target</th><th>Position Value ($)</th><th>Est. Profit ($)</th><th>Est. Loss ($)</th><th>RR</th><th>Exit Price</th><th>Fees ($)</th><th>Net Result ($)</th><th>Date Opened</th><th>Date Closed</th><th>Note</th><th>Charts</th><th class="master-only">Actions</th></tr>
                                 </thead>
                                 <tbody id="completed-trades-tbody"></tbody>
@@ -600,8 +597,10 @@
             </div>
         </div>
         <div id="options-oi-tab" class="tab-content">
-            <!-- The content will be dynamically inserted here by JavaScript -->
-            <p style="text-align: center; padding: 40px; color: var(--subtle-text);">Loading Options Open Interest data...</p>
+            <div id="oi-metadata-header"></div>
+            <div id="oi-dashboard-container">
+                <p style="text-align: center; padding: 40px; color: var(--subtle-text);">Loading Options Market Analysis...</p>
+            </div>
         </div>
 
 
