--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                 </div>
             </div>
         </div>
-        <div id="options-oi-tab" class="tab-content">
+     <div id="options-oi-tab" class="tab-content">
     
     <!-- Market Summary Dashboard -->
     <div id="market-summary-dashboard">
@@ -661,14 +661,15 @@
     <p id="last-updated-charts">Loading chart data...</p>
 
     <div class="chart-container">
-        <canvas id="priceGammaChart"></canvas> <!-- Renamed from priceChart for clarity -->
+        <canvas id="priceGammaChart"></canvas>
     </div>
     <div class="chart-container">
-        <canvas id="gammaExposureChart"></canvas> <!-- New chart -->
+        <canvas id="gammaExposureChart"></canvas>
     </div>
     <div class="chart-container">
         <canvas id="sentimentChart"></canvas>
     </div>
+</div>
 </div>
     <div id="image-modal" class="modal-overlay" style="display: none;">
         <span class="modal-close">&times;</span>
