--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-what lines do i need to fix in the setups tab the iamges have caption to the right side instead of under the image when in full screen : <!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
