--- a/index.html
+++ b/index.html
@@ -755,22 +755,23 @@
             font-weight: 500;
         }
 
-        .modal-overlay {
-            position: fixed;
-            z-index: 2000;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0,0,0,0.85);
-            display: flex;
-            justify-content: center;
-            align-items: flex-start; 
-            padding: 20px 0;
-            overflow-y: auto;
-            animation-name: fadeIn;
-            animation-duration: 0.3s;
-        }
+       .modal-overlay {
+    position: fixed;
+    z-index: 2000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.85);
+    display: flex;
+    flex-direction: column;   /* <--- ADD THIS LINE */
+    justify-content: center;
+    align-items: center;      /* <--- CHANGE THIS LINE */
+    padding: 20px 0;
+    overflow-y: auto;
+    animation-name: fadeIn;
+    animation-duration: 0.3s;
+}
         #image-modal .modal-content {
             margin: auto;
             display: block;
