--- a/index.html
+++ b/index.html
@@ -1272,15 +1272,15 @@
             outline: none;
             border-bottom-color: var(--link-color);
         }
-        #note-modal-content {
-            flex-grow: 1;
-            font-size: 16px;
-            line-height: 1.7;
-            border: 1px solid var(--border-color);
-            padding: 15px;
-            resize: none;
-            overflow-y: hidden; 
-        }
+      #note-modal-content {
+    flex-grow: 1;
+    font-size: 16px;
+    line-height: 1.7;
+    border: 1px solid var(--border-color);
+    padding: 15px;
+    resize: none;
+    overflow-y: auto; /* <--- THIS IS THE FIX */
+}
         .note-modal-actions {
             margin-top: 20px;
             text-align: right;
