--- a/index.html
+++ b/index.html
@@ -2545,11 +2545,11 @@
                         <div class="calculator-grid">
                             <div>
                                 <label for="calc-entry-price">Entry Price</label>
-                                <input type="number" id="calc-entry-price" placeholder="e.g., 68000.50" step="0.01">
+                                <input type="number" id="calc-entry-price" placeholder="" step="0.01">
                             </div>
                             <div>
                                 <label for="calc-position-size">Position Size ($)</label>
-                                <input type="number" id="calc-position-size" placeholder="e.g., 10000" step="1">
+                                <input type="number" id="calc-position-size" placeholder="" step="1">
                             </div>
                             <div style="grid-column: 1 / -1;">
                                 <label>Position Type</label>
