--- a/index.html
+++ b/index.html
@@ -2057,7 +2057,7 @@
                 </div>
                 <div class="collapsible-content">
                     <div class="collapsible-content-inner">
-                        <textarea id="tracker-scratchpad" placeholder="Tracker scratchpad..."></textarea>
+                        <textarea id="tracker-scratchpad" placeholder=""></textarea>
                     </div>
                 </div>
             </div>
@@ -2218,8 +2218,8 @@
     <div class="collapsible-content">
         <div class="collapsible-content-inner">
             <!-- This is correct. No save buttons or status elements. -->
-            <textarea id="primary-setups-notes" class="setups-notes-area" placeholder="Notes for Primary Setups..."></textarea>
-            <textarea id="secondary-setups-notes" class="setups-notes-area" placeholder="Notes for Secondary Setups..."></textarea>
+            <textarea id="primary-setups-notes" class="setups-notes-area" placeholder=""></textarea>
+            <textarea id="secondary-setups-notes" class="setups-notes-area" placeholder=""></textarea>
         </div>
     </div>
 </div>
@@ -2297,7 +2297,7 @@
                 </div>
                 <div class="collapsible-content">
                     <div class="collapsible-content-inner">
-                         <textarea id="persistent-notes-entry" placeholder="Persistent scratchpad..."></textarea>
+                         <textarea id="persistent-notes-entry" placeholder=""></textarea>
                     </div>
                 </div>
             </div>
@@ -2329,7 +2329,7 @@
 
             <div class="journal-input-wrapper">
                  <button id="favourite-btn" class="master-only" title="Pin this note for this timeframe on all days">⭐</button>
-                 <textarea id="journal-entry" placeholder="Select a symbol, timeframe, and date to view or add a journal entry."></textarea>
+                 <textarea id="journal-entry" placeholder=""></textarea>
             </div>
 
             <p id="save-status" style="text-align:center;font-style:italic;color:#666;height:1em"></p>
@@ -4025,7 +4025,7 @@ DOM.secondarySetupsNotes.addEventListener('blur', saveSecondaryNotesOnly);
                 <div class="calculator-grid">
                     <div>
                         <label>Account Balance ($)</label>
-                        <input type="number" class="risk-balance" placeholder="25000" step="100">
+                        <input type="number" class="risk-balance" placeholder="" step="100">
                     </div>
                     <div>
                         <label>Risk Per Trade (%)</label>
@@ -4033,11 +4033,11 @@ DOM.secondarySetupsNotes.addEventListener('blur', saveSecondaryNotesOnly);
                     </div>
                     <div>
                         <label>Entry Price</label>
-                        <input type="number" class="risk-entry" placeholder="68000" step="0.1">
+                        <input type="number" class="risk-entry" placeholder="" step="0.1">
                     </div>
                     <div>
                         <label>Stop-Loss Price</label>
-                        <input type="number" class="risk-stop" placeholder="67500" step="0.1">
+                        <input type="number" class="risk-stop" placeholder="" step="0.1">
                     </div>
                 </div>
                 <div class="risk-sizer-output">
