--- a/index.html
+++ b/index.html
@@ -3955,7 +3955,7 @@ DOM.secondarySetupsNotes.addEventListener('blur', saveSecondaryNotesOnly);
         function addTargetRow() {
             const row = DOM.profitTargetsTbody.insertRow();
             row.innerHTML = `
-                <td><input type="number" class="target-price-input" placeholder="Target Price" step="0.01"></td>
+                <td><input type="number" class="target-price-input" placeholder="" step="0.01"></td>
                 <td>--</td>
                 <td>--</td>
                 <td>--</td>
